--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,8 +1,10 @@
 { "ConnectionStrings" :{
   "DefaultConnection": "Data source=datingapp.db"
 }, 
+"TokenKey": "super secret key",
 
   "Logging": {
+
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Information",
