--- a/client/angular.json
+++ b/client/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootswatch/dist/united/bootstrap.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
@@ -97,7 +98,10 @@
               "src/assets"
             ],
             "styles": [
+              ".node_modules/font-awesome/css/font-awesome.css",
+              ".node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
+      
             ],
             "scripts": []
           }
